force-app/main/default/objects/Finance_Transaction__c/Finance_Transaction__c.object-meta.xml
<CustomObject>
    <description>A single income or expense entry in the Personal Finance app. Amounts are stored in their original currency alongside a locked-in AUD conversion.</description>
    <label>Transaction</label>
    <nameField>
        <displayFormat>TXN-{0000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>