force-app/main/default/objects/Finance_Transaction__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Amount in the transaction's own currency (see Currency__c). Always positive; Type__c decides the direction.</description>
    <label>Amount</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>