force-app/main/default/objects/Finance_Transaction__c/fields/Amount_AUD__c.field-meta.xml
<CustomField>
    <fullName>Amount_AUD__c</fullName>
    <description>Amount__c converted to AUD at Exchange_Rate__c. Set by FinanceTransactionTrigger; stored (not a formula) so it can be summed in aggregate queries.</description>
    <label>Amount (AUD)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>