force-app/main/default/objects/Finance_Transaction__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>ISO code of the currency Amount__c is expressed in. AUD is the base currency all totals are reported in.</description>
    <label>Currency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUD</fullName>
                <default>true</default>
                <label>AUD</label>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>UYU</fullName>
            </value>
            <value>
                <fullName>ARS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>