force-app/main/default/objects/Finance_Transaction__c/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <description>AUD per 1 unit of Currency__c, locked in when the transaction is saved so historical totals never drift. Always 1 for AUD.</description>
    <label>Exchange Rate (to AUD)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>