force-app/main/default/objects/Finance_Transaction__c/fields/Next_Occurrence_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Occurrence_Date__c</fullName>
    <description>Internal: when the next occurrence of a recurring transaction should be created. Maintained by FinanceTransactionTrigger.</description>
    <label>Next Occurrence Date</label>
    <type>Date</type>
</CustomField>