force-app/main/default/objects/Finance_Transaction__c/fields/Signed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Signed_Amount__c</fullName>
    <description>Amount in AUD, negative for expenses. Handy for reports that net income against expenses.</description>
    <formula>IF(ISPICKVAL(Type__c, &apos;Expense&apos;), -Amount_AUD__c, Amount_AUD__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signed Amount (AUD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>