force-app/main/default/objects/Finance_Transaction__c/validationRules/Date_Range_Invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Range_Invalid</fullName>
    <active>true</active>
    <description>Future-dated (planned) transactions are allowed up to one year ahead.</description>
    <errorConditionFormula>OR(Date__c &lt; DATE(2000, 1, 1), Date__c &gt; TODAY() + 365)</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>Date must be between 01/01/2000 and one year from today.</errorMessage>
</ValidationRule>