force-app/main/default/objects/Finance_Transaction__c/validationRules/Exchange_Rate_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Exchange_Rate_Required</fullName>
    <active>true</active>
    <description>Non-AUD transactions need a positive rate so they can be converted into the AUD totals.</description>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Currency__c, &apos;AUD&apos;)), OR(ISBLANK(Exchange_Rate__c), Exchange_Rate__c &lt;= 0))</errorConditionFormula>
    <errorDisplayField>Exchange_Rate__c</errorDisplayField>
    <errorMessage>Enter an exchange rate greater than zero for non-AUD transactions.</errorMessage>
</ValidationRule>