force-app/main/default/objects/Finance_Transaction__c/listViews/Income.listView-meta.xml
<ListView>
    <fullName>Income</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Category__c</columns>
    <columns>Amount__c</columns>
    <columns>Currency__c</columns>
    <columns>Amount_AUD__c</columns>
    <columns>Description__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Income</value>
    </filters>
    <label>Income</label>
</ListView>